--- a/index.html
+++ b/index.html
@@ -1,39 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Parallax Webpage</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="pimg1">
-    <div class="ptext">
-      <span class="border">
-        Highrise Construction
-      </span>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Parallax Webpage</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="pimg1">
+      <div class="ptext">
+        <span class="border">
+          Highrise Construction
+        </span>
+      </div>
     </div>
-  </div>
 
-  <section class="section section-light">
-    <h2>Global Building Network</h2>
-    <p>We have a network of partners across the globe who we work with to ensure wherever you want to build your project we can help.
+    <section class="section section-light">
+      <h2>Global Building Network</h2>
+      <p>
+        We have a network of partners across the globe who we work with to
+        ensure wherever you want to build your project we can help. All of the
+        companies we work with are at the top of there industry in their
+        respective part of the world and all employees are trained to the
+        highest statndards in the most modern techniques.
+      </p>
+    </section>
 
-    All of the companies we work with are at the top of there industry in their respective part of the world and all employees are trained to the highest statndards in the most modern techniques.</p>
-  </section>
-
-  <div class="pimg2">
-    <div class="ptext">
-      <span class="border trans">
-        NCC AB (Sweden)
-      </span>
+    <div class="pimg2">
+      <div class="ptext">
+        <span class="border trans">
+          NCC AB (Sweden)
+        </span>
+      </div>
     </div>
-  </div>
 
     <section class="section section-dark">
       <h2>Our Europe Partner</h2>
-      <p>Founded in 1988, NCC ranks as the second largest construction company in the Nordic area, posting $6.34bn in 2016 revenue. CEO Håkan Broman took the reins as acting CEO in October, 2017, after the outfit saw a modest backslide in revenue from 2015. The diversified company handles projects that include residential and commercial properties, civil engineering, roadways and public facilities, among others. Based in Stockholm, Sweden, the outfit employs upwards of 17,000 people and has taken on projects in Germany and the Baltic region. Its most noteworthy works include the 54-story Turning Torso building in Malmo, Oresund Link, Vasa Museum and Kista Science Tower.</p>
+      <p>
+        Founded in 1988, NCC ranks as the second largest construction company in
+        the Nordic area, posting $6.34bn in 2016 revenue. CEO Håkan Broman took
+        the reins as acting CEO in October, 2017, after the outfit saw a modest
+        backslide in revenue from 2015. The diversified company handles projects
+        that include residential and commercial properties, civil engineering,
+        roadways and public facilities, among others. Based in Stockholm,
+        Sweden, the outfit employs upwards of 17,000 people and has taken on
+        projects in Germany and the Baltic region. Its most noteworthy works
+        include the 54-story Turning Torso building in Malmo, Oresund Link, Vasa
+        Museum and Kista Science Tower.
+      </p>
     </section>
 
     <div class="pimg3">
@@ -46,16 +61,23 @@
 
     <section class="section section-dark">
       <h2>Our Asia Partner</h2>
-      <p>PowerChina is one of the biggest construction companies in the world and is one of the largest companies in China. Like most of the other companies on this list, they too work internationally. They work primarily in energy and infrastructures. And will be working on a large infrastructure project in Kenya this year, along with others. The company employs over 135,000 people and has an annual revenue of around $45.5 billion U.S. dollars.</p>
+      <p>
+        PowerChina is one of the biggest construction companies in the world and
+        is one of the largest companies in China. Like most of the other
+        companies on this list, they too work internationally. They work
+        primarily in energy and infrastructures. And will be working on a large
+        infrastructure project in Kenya this year, along with others. The
+        company employs over 135,000 people and has an annual revenue of around
+        $45.5 billion U.S. dollars.
+      </p>
     </section>
 
     <div class="pimg1">
       <div class="ptext">
         <span class="border">
-          We will build your vision
+          <a href="contact.html">We will build your vision</a>
         </span>
       </div>
     </div>
-
-</body>
+  </body>
 </html>
